# CoVer

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
AnnotVerifier/: AnnotVerifier.cpp  CMakeLists.txt
Docs/: LanguageSupport.md  Usage.md
Dynamic/: CMakeLists.txt  DynamicUtils.cpp  DynamicUtils.h  FastVariant.h  Hooks.cpp  Hooks.hpp  Launcher.cpp
Dynamic/Analyses/: AllocAnalysis.cpp  AllocAnalysis.h  BaseAnalysis.h  ParamAnalysis.cpp  ParamAnalysis.h  PostCallAnalysis.cpp  PostCallAnalysis.h  PreCallAnalysis.cpp  PreCallAnalysis.h  ReleaseAnalysis.cpp  ReleaseAnalysis.h
Dynamic/Analysis/: CMakeLists.txt  DynamicUtils.cpp  DynamicUtils.h  Hooks.cpp
Dynamic/Analysis/Analyses/: BaseAnalysis.h  PostCallAnalysis.cpp  PostCallAnalysis.h  PreCallAnalysis.cpp  PreCallAnalysis.h  ReleaseAnalysis.cpp  ReleaseAnalysis.h
Grammars/: ContractLexer.g4  ContractParser.g4
Include/: ContractPassUtility.hpp  ContractTree.hpp  Contracts.F90  Contracts.h  DynamicAnalysis.h  ErrorMessage.h  TUICmds.hpp  TUIManager.h  TUIManager.hpp  TUITrace.hpp  TUITraceTypes.hpp  mpi_contracts.h
Intrinsics/: CMakeLists.txt  Intrinsics.c
LangCode/: ContractDataExtractor.cpp  ContractDataExtractor.hpp  ContractDataVisitor.cpp  ContractDataVisitor.hpp  ContractLangErrorListener.cpp  ContractLangErrorListener.hpp
Passes/: BasicTypes.cpp  BasicTypes.hpp  ContractManager.cpp  ContractManager.hpp  ContractPostProcess.cpp  ContractPostProcess.hpp  ContractVerifier.cpp  ContractVerifier.hpp  ContractVerifierAlloc.cpp  ContractVerifierAlloc.hpp  ContractVerifierParam.cpp  ContractVerifierParam.hpp  ContractVerifierPostCall.cpp  ContractVerifierPostCall.hpp  ContractVerifierPreCall.cpp  ContractVerifierPreCall.hpp  ContractVerifierRW.cpp  ContractVerifierRW.hpp  ContractVerifierRelease.cpp  ContractVerifierRelease.hpp  Instrument.cpp  Instrument.hpp  Intrinsics.cpp  Intrinsics.hpp  Registrar.cpp
Scripts/: clangContracts.cpp  clangContracts.cpp.in  clangContracts.sh.in  gen_mpi_contr_h.py  gen_shmem_contr_h.py
Tests/: .gitignore  CMakeLists.txt  enrich_xunit.py  lit.cfg.in
Tests/c/: Alloc-BufNotAllocated.c  Alloc-BufUseAfterFree.c  Correct-Minimal.c  Correct-P2P.c  Correct-P2POffset.c  Correct-P2PStackBuf.c  Correct-RankNull.c  Correct-WinAlloc.c  Param-InvalidComm.c  Param-SendRecvOverlap.c  PostCall-MissingFinalize.c  PreCall-MissingInit.c  Release-DataRace.c
Tests/fort/: Alloc-BufNotAllocated.F90  Alloc-BufUseAfterFree.F90  Correct-Minimal.F90  Correct-P2P.F90  Correct-P2POffset.F90  Correct-P2PStackBuf.F90  Correct-RankNull.F90  Correct-WinAlloc.F90  Param-InvalidComm.F90  Param-SendRecvOverlap.F90  PostCall-MissingFinalize.F90  PreCall-MissingInit.F90  Release-DataRace.F90
Utils/: ContractPassUtility.cpp  TUIManager.cpp  TUITrace.cpp  bash-autocomplete.sh
docker_files/: libantlr4-runtime-dev_4.10+dfsg-1_amd64.deb  libantlr4-runtime4.10_4.10+dfsg-1_amd64.deb
